# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import eventsRouter from "./events";
 import medicationsRouter from "./medications";
 import domRouter from "./dom";
+import contingenciaRouter from "./contingencia";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(eventsRouter);
 router.use(medicationsRouter);
 router.use(domRouter);
+router.use(contingenciaRouter);
 
 export default router;
